--- a/BasicFunc.html
+++ b/BasicFunc.html
@@ -10,17 +10,67 @@
 
 <body>
     <script>
-        function add(a, b) {
-            return a + b;
-        }
-        let num1 = parseFloat(prompt("enter 1st no:"));
-        let num2 = parseFloat(prompt("enter 2st no:"));
+        // function add(a, b) {
+        //     return a + b;
+        // }
+        // let num1 = parseFloat(prompt("enter 1st no:"));
+        // let num2 = parseFloat(prompt("enter 2st no:"));
 
-        let addition = add(num1, num2);
+        // let addition = add(num1, num2);
 
-        console.log(addition);
-        document.write(addition);
+        // console.log(addition);
+        // document.write(addition);
 
+        // function OddEven(Num) {
+        //     if (Num % 2 == 0)
+        //         console.log(Num, ' is Even');
+        //     else
+        //         console.log(Num, ' is odd');
+        // }
+
+        // OddEven(23);
+
+        // let j = 1;
+        // function factorial(num) {
+        //     for (let i = 1; i <= num; i++) {
+        //         j = j * i;
+        //     }
+        //     console.log(j);
+        // } factorial(5)
+
+        // let arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+        // let arr1 = [];
+        // let arr2 = [];
+        // let size = arr.length;
+        // function odd() {
+        //     for (let n = 0; n < arr.length; n++) {
+        //         if ((arr[n]) % 2 == 0)
+        //             arr1.push(arr[n]);
+        //         else
+        //             arr2.push(arr[n]);
+        //     }
+        //     console.log(arr1);
+        //     console.log(arr2);
+        // }
+
+        // odd();
+
+        // let num = parseInt(prompt('enter any number'));
+        // let j = 0;
+        // function prime() {
+        //     for (let i = 1; i <= num; i++) {
+        //         let c = num % i;
+
+        //         if (c == 0)
+        //             j++;
+
+        //     }
+        //     if (j == 2)
+        //         console.log(num + " is prime");
+        //     else
+        //         console.log(num + " is not prime");
+        // }
+        // prime();
     </script>
 </body>
 
